--- a/main.tex
+++ b/main.tex
@@ -48,7 +48,7 @@
   backrefpages={}
 }
 %\addbibresource{\subfix{./Biblio/biblio.bib}}
-%\addbibresource{./Biblio/biblio.bib}
+\addbibresource{./Biblio/biblio.bib}
 \input{Notations.tex}
 %compile only a chapter
 \SetAlCapSkip{1em}
@@ -77,7 +77,6 @@
 \subfile{06-Analyse/source}
 \subfile{06b-Analyse-2D/source}
 
-%\subfile{08-Application/source}
 \subfile{Conclusion}
 %Bibliography files
 
